content/docs/9500_python-api/9000_versions/v0.2.15/splitgraph.ingestion.mdx



export const meta = {
  title: "splitgraph.ingestion package",
  id: "splitgraph.ingestion package"
};

<div className=" rst-content"><nav className="toc"><ol className="toc-level toc-level-1"><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#module-contents">Module contents</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#subpackages">Subpackages</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#submodules">Submodules</a><ol className="toc-level toc-level-2"><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#splitgraphingestioncommon-module">splitgraph.ingestion.common module</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#splitgraphingestioninference-module">splitgraph.ingestion.inference module</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#splitgraphingestionpandas-module">splitgraph.ingestion.pandas module</a></li></ol></li></ol></nav><div className="section" id="module-splitgraph.ingestion">
<span id="module-contents"></span><h2 id="module-contents">Module contents<a className="headerlink" href="#module-splitgraph.ingestion" title="Permalink to this headline">¶</a></h2>
</div><div className="section" id="splitgraph-ingestion-package">

<div className="section" id="subpackages">
<h2 id="subpackages">Subpackages<a className="headerlink" href="#subpackages" title="Permalink to this headline">¶</a></h2>
<div className="toctree-wrapper compound">
<ul>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.ingestion.airbyte/">splitgraph.ingestion.airbyte package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.airbyte/#submodules">Submodules</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.airbyte/#module-splitgraph.ingestion.airbyte.data_source">splitgraph.ingestion.airbyte.data_source module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.airbyte/#module-splitgraph.ingestion.airbyte.docker_utils">splitgraph.ingestion.airbyte.docker_utils module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.airbyte/#module-splitgraph.ingestion.airbyte.models">splitgraph.ingestion.airbyte.models module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.airbyte/#module-splitgraph.ingestion.airbyte.utils">splitgraph.ingestion.airbyte.utils module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.airbyte/#module-splitgraph.ingestion.airbyte">Module contents</a></li>
</ul>
</li>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.ingestion.csv/">splitgraph.ingestion.csv package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.csv/#submodules">Submodules</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.csv/#module-splitgraph.ingestion.csv.common">splitgraph.ingestion.csv.common module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.csv/#module-splitgraph.ingestion.csv.fdw">splitgraph.ingestion.csv.fdw module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.csv/#module-splitgraph.ingestion.csv">Module contents</a></li>
</ul>
</li>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.ingestion.singer/">splitgraph.ingestion.singer package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.singer/#submodules">Submodules</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.singer/#module-splitgraph.ingestion.singer.commandline">splitgraph.ingestion.singer.commandline module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.singer/#module-splitgraph.ingestion.singer.common">splitgraph.ingestion.singer.common module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.singer/#module-splitgraph.ingestion.singer.data_source">splitgraph.ingestion.singer.data_source module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.singer/#module-splitgraph.ingestion.singer.db_sync">splitgraph.ingestion.singer.db_sync module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.singer/#module-splitgraph.ingestion.singer">Module contents</a></li>
</ul>
</li>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.ingestion.snowflake/">splitgraph.ingestion.snowflake package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.snowflake/#module-splitgraph.ingestion.snowflake">Module contents</a></li>
</ul>
</li>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.ingestion.socrata/">splitgraph.ingestion.socrata package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.socrata/#submodules">Submodules</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.socrata/#module-splitgraph.ingestion.socrata.fdw">splitgraph.ingestion.socrata.fdw module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.socrata/#module-splitgraph.ingestion.socrata.mount">splitgraph.ingestion.socrata.mount module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.socrata/#module-splitgraph.ingestion.socrata.querying">splitgraph.ingestion.socrata.querying module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion.socrata/#module-splitgraph.ingestion.socrata">Module contents</a></li>
</ul>
</li>
</ul>
</div>
</div>
<div className="section" id="submodules">
<h2 id="submodules">Submodules<a className="headerlink" href="#submodules" title="Permalink to this headline">¶</a></h2>
</div>
<div className="section" id="module-splitgraph.ingestion.common">
<span id="splitgraph-ingestion-common-module"></span><h2 id="splitgraphingestioncommon-module">splitgraph.ingestion.common module<a className="headerlink" href="#module-splitgraph.ingestion.common" title="Permalink to this headline">¶</a></h2>
<dl className="py class">
<dt className="sig sig-object py" id="splitgraph.ingestion.common.IngestionAdapter">
<em className="property"><span className="pre">class</span> </em><span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.common.</span></span><span className="sig-name descname"><span className="pre">IngestionAdapter</span></span><a className="headerlink" href="#splitgraph.ingestion.common.IngestionAdapter" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <code className="xref py py-class docutils literal notranslate"><span className="pre">object</span></code></p>
<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.common.IngestionAdapter.create_ingestion_table">
<em className="property"><span className="pre">abstract</span> </em><span className="sig-name descname"><span className="pre">create_ingestion_table</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">data</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">engine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">table</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.common.IngestionAdapter.create_ingestion_table" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.common.IngestionAdapter.data_to_new_table">
<em className="property"><span className="pre">abstract</span> </em><span className="sig-name descname"><span className="pre">data_to_new_table</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">data</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">engine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">table</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">no_header</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">bool</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">True</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.common.IngestionAdapter.data_to_new_table" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.common.IngestionAdapter.query_to_data">
<em className="property"><span className="pre">abstract</span> </em><span className="sig-name descname"><span className="pre">query_to_data</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">engine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">query</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">None</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.common.IngestionAdapter.query_to_data" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.common.IngestionAdapter.to_data">
<span className="sig-name descname"><span className="pre">to_data</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">query</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">image</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">Union</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="splitgraph.core/#splitgraph.core.image.Image" title="splitgraph.core.image.Image"><span className="pre">splitgraph.core.image.Image</span></a><span className="p"><span className="pre">,</span> </span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">None</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">repository</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="splitgraph.core/#splitgraph.core.repository.Repository" title="splitgraph.core.repository.Repository"><span className="pre">splitgraph.core.repository.Repository</span></a><span className="p"><span className="pre">]</span></span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">None</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">use_lq</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">bool</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">False</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.common.IngestionAdapter.to_data" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.common.IngestionAdapter.to_table">
<span className="sig-name descname"><span className="pre">to_table</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">data</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">repository</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><a className="reference internal" href="splitgraph.core/#splitgraph.core.repository.Repository" title="splitgraph.core.repository.Repository"><span className="pre">splitgraph.core.repository.Repository</span></a></span></em>, <em className="sig-param"><span className="n"><span className="pre">table</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">if_exists</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">'patch'</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema_check</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">bool</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">True</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">no_header</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">bool</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">False</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.common.IngestionAdapter.to_table" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

</dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.common.build_commandline_help">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.common.</span></span><span className="sig-name descname"><span className="pre">build_commandline_help</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">json_schema</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.common.build_commandline_help" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.common.dedupe_sg_schema">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.common.</span></span><span className="sig-name descname"><span className="pre">dedupe_sg_schema</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">schema_spec</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="splitgraph.core/#splitgraph.core.types.TableColumn" title="splitgraph.core.types.TableColumn"><span className="pre">splitgraph.core.types.TableColumn</span></a><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">prefix_len</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">int</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">59</span></span></em><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="splitgraph.core/#splitgraph.core.types.TableColumn" title="splitgraph.core.types.TableColumn"><span className="pre">splitgraph.core.types.TableColumn</span></a><span className="p"><span className="pre">]</span></span></span></span><a className="headerlink" href="#splitgraph.ingestion.common.dedupe_sg_schema" title="Permalink to this definition">¶</a></dt>
<dd><p>Some foreign schemas have columns that are longer than 63 characters
where the first 63 characters are the same between several columns
(e.g. odn.data.socrata.com). This routine renames columns in a schema
to make sure this can’t happen (by giving duplicates a number suffix).</p>
</dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.common.generate_column_names">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.common.</span></span><span className="sig-name descname"><span className="pre">generate_column_names</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">schema_spec</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="splitgraph.core/#splitgraph.core.types.TableColumn" title="splitgraph.core.types.TableColumn"><span className="pre">splitgraph.core.types.TableColumn</span></a><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">prefix</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">'col_'</span></span></em><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="splitgraph.core/#splitgraph.core.types.TableColumn" title="splitgraph.core.types.TableColumn"><span className="pre">splitgraph.core.types.TableColumn</span></a><span className="p"><span className="pre">]</span></span></span></span><a className="headerlink" href="#splitgraph.ingestion.common.generate_column_names" title="Permalink to this definition">¶</a></dt>
<dd><p>Replace empty column names with autogenerated ones</p>
</dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.common.merge_tables">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.common.</span></span><span className="sig-name descname"><span className="pre">merge_tables</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">engine</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><a className="reference internal" href="splitgraph.engine.postgres/#splitgraph.engine.postgres.engine.PsycopgEngine" title="splitgraph.engine.postgres.engine.PsycopgEngine"><span className="pre">splitgraph.engine.postgres.engine.PsycopgEngine</span></a></span></em>, <em className="sig-param"><span className="n"><span className="pre">source_schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">source_table</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">source_schema_spec</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="splitgraph.core/#splitgraph.core.types.TableColumn" title="splitgraph.core.types.TableColumn"><span className="pre">splitgraph.core.types.TableColumn</span></a><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">target_schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">target_table</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">target_schema_spec</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="splitgraph.core/#splitgraph.core.types.TableColumn" title="splitgraph.core.types.TableColumn"><span className="pre">splitgraph.core.types.TableColumn</span></a><span className="p"><span className="pre">]</span></span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.common.merge_tables" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.common.schema_compatible">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.common.</span></span><span className="sig-name descname"><span className="pre">schema_compatible</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">source_schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="splitgraph.core/#splitgraph.core.types.TableColumn" title="splitgraph.core.types.TableColumn"><span className="pre">splitgraph.core.types.TableColumn</span></a><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">target_schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="splitgraph.core/#splitgraph.core.types.TableColumn" title="splitgraph.core.types.TableColumn"><span className="pre">splitgraph.core.types.TableColumn</span></a><span className="p"><span className="pre">]</span></span></span></em><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">bool</span></span></span><a className="headerlink" href="#splitgraph.ingestion.common.schema_compatible" title="Permalink to this definition">¶</a></dt>
<dd><p>Quick check to see if a dataframe with target_schema can be written into source_schema.
There are some implicit type conversions that SQLAlchemy/Pandas can do so we don’t want to immediately fail
if the column types aren’t exactly the same (eg bigint vs numeric etc). Most errors should be caught by PG itself.</p>
<p>Schema is a list of (ordinal, name, type, is_pk).</p>
</dd></dl>

</div>
<div className="section" id="module-splitgraph.ingestion.inference">
<span id="splitgraph-ingestion-inference-module"></span><h2 id="splitgraphingestioninference-module">splitgraph.ingestion.inference module<a className="headerlink" href="#module-splitgraph.ingestion.inference" title="Permalink to this headline">¶</a></h2>
<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.inference.infer_sg_schema">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.inference.</span></span><span className="sig-name descname"><span className="pre">infer_sg_schema</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">sample</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Sequence</span><span className="p"><span className="pre">[</span></span><span className="pre">Sequence</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">override_types</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">None</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">primary_keys</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">None</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.inference.infer_sg_schema" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.inference.parse_bigint">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.inference.</span></span><span className="sig-name descname"><span className="pre">parse_bigint</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">integer</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.inference.parse_bigint" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.inference.parse_boolean">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.inference.</span></span><span className="sig-name descname"><span className="pre">parse_boolean</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">boolean</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.inference.parse_boolean" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.inference.parse_int">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.inference.</span></span><span className="sig-name descname"><span className="pre">parse_int</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">integer</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.inference.parse_int" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

</div>
<div className="section" id="module-splitgraph.ingestion.pandas">
<span id="splitgraph-ingestion-pandas-module"></span><h2 id="splitgraphingestionpandas-module">splitgraph.ingestion.pandas module<a className="headerlink" href="#module-splitgraph.ingestion.pandas" title="Permalink to this headline">¶</a></h2>
<p>Routines that ingest/export CSV files to/from Splitgraph images using Pandas</p>
<dl className="py class">
<dt className="sig sig-object py" id="splitgraph.ingestion.pandas.PandasIngestionAdapter">
<em className="property"><span className="pre">class</span> </em><span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.pandas.</span></span><span className="sig-name descname"><span className="pre">PandasIngestionAdapter</span></span><a className="headerlink" href="#splitgraph.ingestion.pandas.PandasIngestionAdapter" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.ingestion.common.IngestionAdapter" title="splitgraph.ingestion.common.IngestionAdapter"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.ingestion.common.IngestionAdapter</span></code></a></p>
<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.pandas.PandasIngestionAdapter.create_ingestion_table">
<em className="property"><span className="pre">static</span> </em><span className="sig-name descname"><span className="pre">create_ingestion_table</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">data</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">engine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">table</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.pandas.PandasIngestionAdapter.create_ingestion_table" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.pandas.PandasIngestionAdapter.data_to_new_table">
<em className="property"><span className="pre">static</span> </em><span className="sig-name descname"><span className="pre">data_to_new_table</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">data</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">engine</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">PsycopgEngine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">table</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">no_header</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">bool</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">True</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.pandas.PandasIngestionAdapter.data_to_new_table" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt className="sig sig-object py" id="splitgraph.ingestion.pandas.PandasIngestionAdapter.query_to_data">
<em className="property"><span className="pre">static</span> </em><span className="sig-name descname"><span className="pre">query_to_data</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">engine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">query</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">None</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.pandas.PandasIngestionAdapter.query_to_data" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

</dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.pandas.df_to_table">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.pandas.</span></span><span className="sig-name descname"><span className="pre">df_to_table</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">df</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Union</span><span className="p"><span className="pre">[</span></span><span className="pre">pandas.core.series.Series</span><span className="p"><span className="pre">,</span> </span><span className="pre">pandas.core.frame.DataFrame</span><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">repository</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><a className="reference internal" href="splitgraph.core/#splitgraph.core.repository.Repository" title="splitgraph.core.repository.Repository"><span className="pre">splitgraph.core.repository.Repository</span></a></span></em>, <em className="sig-param"><span className="n"><span className="pre">table</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">if_exists</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">'patch'</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema_check</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">bool</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">True</span></span></em><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">None</span></span></span><a className="headerlink" href="#splitgraph.ingestion.pandas.df_to_table" title="Permalink to this definition">¶</a></dt>
<dd><p>Writes a Pandas DataFrame to a checked-out Splitgraph table. Doesn’t create a new image.</p>
<dl className="field-list simple">
<dt className="field-odd">Parameters</dt>
<dd className="field-odd"><ul className="simple">
<li><p><strong>df</strong> – Pandas DataFrame to insert.</p></li>
<li><p><strong>repository</strong> – Splitgraph Repository object. Must be checked out.</p></li>
<li><p><strong>table</strong> – Table name.</p></li>
<li><p><strong>if_exists</strong> – Behaviour if the table already exists: ‘patch’ means that primary keys that already exist in the</p></li>
</ul>
</dd>
</dl>
<p>table will be updated and ones that don’t will be inserted. ‘replace’ means that the table will be dropped and
recreated.
:param schema_check: If False, skips checking that the dataframe is compatible with the target schema.</p>
</dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.pandas.df_to_table_fast">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.pandas.</span></span><span className="sig-name descname"><span className="pre">df_to_table_fast</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">engine</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">PsycopgEngine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">df</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Union</span><span className="p"><span className="pre">[</span></span><span className="pre">pandas.core.series.Series</span><span className="p"><span className="pre">,</span> </span><span className="pre">pandas.core.frame.DataFrame</span><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">target_schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">target_table</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.pandas.df_to_table_fast" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py function">
<dt className="sig sig-object py" id="splitgraph.ingestion.pandas.sql_to_df">
<span className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.pandas.</span></span><span className="sig-name descname"><span className="pre">sql_to_df</span></span><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">sql</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">image</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">Union</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="splitgraph.core/#splitgraph.core.image.Image" title="splitgraph.core.image.Image"><span className="pre">splitgraph.core.image.Image</span></a><span className="p"><span className="pre">,</span> </span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">None</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">repository</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><a className="reference internal" href="splitgraph.core/#splitgraph.core.repository.Repository" title="splitgraph.core.repository.Repository"><span className="pre">splitgraph.core.repository.Repository</span></a><span className="p"><span className="pre">]</span></span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">None</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">use_lq</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">bool</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">False</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span> <span className="sig-return"><span className="sig-return-icon">→</span> <span className="sig-return-typehint"><span className="pre">pandas.core.frame.DataFrame</span></span></span><a className="headerlink" href="#splitgraph.ingestion.pandas.sql_to_df" title="Permalink to this definition">¶</a></dt>
<dd><p>Executes an SQL query against a Splitgraph image, returning the result.</p>
<p>Extra <cite>**kwargs</cite> are passed to Pandas’ <cite>read_sql_query</cite>.</p>
<dl className="field-list simple">
<dt className="field-odd">Parameters</dt>
<dd className="field-odd"><ul className="simple">
<li><p><strong>sql</strong> – SQL query to execute.</p></li>
<li><p><strong>image</strong> – Image object, image hash/tag (<cite>str</cite>) or None (use the currently checked out image).</p></li>
<li><p><strong>repository</strong> – Repository the image belongs to. Must be set if <cite>image</cite> is a hash/tag or None.</p></li>
<li><p><strong>use_lq</strong> – Whether to use layered querying or check out the image if it’s not checked out.</p></li>
</ul>
</dd>
<dt className="field-even">Returns</dt>
<dd className="field-even"><p>A Pandas dataframe.</p>
</dd>
</dl>
</dd></dl>

</div>

</div>
</div>